0.5.0:
* Fix downloading packages with mismatched underscore vs dashes in the package
  names.

0.4.1 (2013-01-23):
* Fix a bug which resulted in throwing 404's for packages which have a dot in
  the name.

0.4.0 (2013-01-07):
* Use django-userena for authentication
* Use django-configurations and now uses the optional custom settings at
  ~/.localshop.py. Logan is now also not used anymore.
* Add additional separate credentials for uploading and downloading from
  the pypi instance (using access/secret keys).
* Implement support for 'pip search'
* Many other improvements! (thanks Jannis Leidel)

0.3:
* Use Django 1.4 and restructure the app layout
* Other minor bugfixes

0.2.2:
* Don't display the download_url or home_page url if they are unknown
* Add correct rel-tag to the urls

0.2.1:
* Use the correct LOGIN_URL setting.
* Add download_url and home_page url to the simple detail page. note that this
  is currently not mirrored yet.

0.2:
* Implement configurable access control / ip check

0.1.3:
* Fix distutils interface
* Add missing requirement (docutils)

0.1.2:
* Refactor client validation for /simple and download

0.1.1:
* Add setting to list ip addresses which have access to download packages,
LOCALSHOP_ALLOWED_REMOTE_IPS

0.1:
* Initial release