@@ -1,4 +1,5 @@
 0.5.0:
+* Allow localshop to be initialised without any interaction, useful for automating installation
 * Fix downloading packages with mismatched underscore vs dashes in the package
   names.
 
